Add ui-server (#78)
